tests/pass/Conditional.java
package pass;

public class Conditional {
    public static int normal() {
        unless(2 == 1) {
            return 1;
        }else{
            return 2;
        }
    }
}
