tests/fail/ModuloFail.java
package fail;

public class ModuloFail {
    public int mod() {
        return 'a' % 42;
    }
}